@@ -1,5 +1,11 @@
 2014-05-14  Ramon Casero  <rcasero@gmail.com>
 
+	* matlab/CgalToolbox/CMakeLists.txt: (0.2.22)
+
+	- Fix bug. In Windows, cgal_meshseg and cgal_checl_self_intersect cannot be 
+	linked here to boost_thread, or we get a "one or more multiply defined 
+	symbols found" link error.
+
 	* matlab/CgalToolbox/CMakeLists.txt: (0.2.21)
 
 	- Fix bug. cgal_meshseg and cgal_checl_self_intersect need to link
